cargo-features = ["edition"]

[package]
name = "argon-errors"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
description = "Argon Language"
license = "ISC"
# build = "build.rs" # LALRPOP preprocessing
edition = "2018"

# The generated code depends on lalrpop-util.
#
# The generated tokenizer depends on the regex crate.
#
# (If you write your own tokenizer, or already have the regex
# crate, you can skip this dependency.)
[dependencies]
argon = { path = "../argon" }
failure = "0.1.1"

# Add a build-time dependency on the lalrpop library:
# [build-dependencies]
# lalrpop =  { git = "https://github.com/wycats/lalrpop.git", branch = "module_attributes" }
