cargo-features = ["edition"]

[package]
name = "argon-package"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.4.6"
serde = "1.0.66"
serde_derive = "1.0.66"
license-exprs = "1.3.0"
serde_json = "1.0.22"
clap = "2.32.0"
indoc = "0.2.6"
failure = "0.1.1"
shellexpand = "1.0.0"

[dev-dependencies]
assert_cli = "0.6.1"