cargo-features = ["edition"]

[package]
name = "argon"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
description = "Argon Language"
license = "ISC"
# build = "build.rs" # LALRPOP preprocessing
edition = "2018"

# The generated code depends on lalrpop-util.
#
# The generated tokenizer depends on the regex crate.
#
# (If you write your own tokenizer, or already have the regex
# crate, you can skip this dependency.)
[dependencies]
lalrpop-util = "0.15.2"
regex = "1.0.0"
derive-new = "0.5.4"
parity-wasm = "0.27.0"
nan-preserving-float = "0.1.0"
itertools = "0.7.8"
log = "0.4.2"
ena = "0.9.3"
unicode-xid = "0.1.0"
lazy_static = "1.0.1"
failure = "0.1.1"

[dev-dependencies]
wasmi = "0.2.0"
pretty_env_logger = "0.2.3"

# Add a build-time dependency on the lalrpop library:
# [build-dependencies]
# lalrpop =  { git = "https://github.com/wycats/lalrpop.git", branch = "module_attributes" }
