cargo-features = ["edition"]

[package]

name = "wasm-tests"
version = "1.0.0"
edition = "2018"

[dependencies]

wasmi = "0.2.0"
parity-wasm = "0.27.0"
nan-preserving-float = "0.1.0"
lalrpop-util = { git = "https://github.com/wycats/lalrpop.git", branch = "module_attributes" }

[dependencies.wasm]
path = "../direct"